manifests/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: https-go-web-gateway
  namespace: default
spec:
  gatewayClassName: eg
  infrastructure:
    annotations:
      metallb.io/ip-allocated-from-pool: ipv6-default
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
  - allowedRoutes:
      namespaces:
        from: All
    hostname: https.br0.no
    name: https
    port: 443
    protocol: HTTPS
    tls:
      certificateRefs:
      - group: ""
        kind: Secret
        name: https-go-web-gateway-default
      mode: Terminate
